--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "jwt-decode": "^2.2.0",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
+    "redux-thunk": "^2.2.0",
+    "validator": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
