--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "chart.js": "^2.7.1",
     "enzyme-adapter-react-16": "^1.1.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.1",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
+    "react-intl": "^2.4.0",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.1.0",
